--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,5 @@
     <string name="biernobo">biernobo</string>
     <string name="zur_ck">Zurück</string>
     <string name="weiter">Weiter</string>
+    <string name="bonobier">bonobier</string>
 </resources>
