finalize buttons restructure game tasks added taskarray

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,5 +6,7 @@
     <string name="title_leaderboard">Highscores</string>
     <string name="title_spielen">Spielen</string>
     <string name="title_weiteres">Mehr</string>
-    <string name="tasks">Aufgaben</string>
+    <string name="tasks">Zum spielen auf weiter klicken</string>
+    <string name="AddPlayer">Spieler hinzufügen</string>
+    <string name="RemovePlayer">Spiler entfernen</string>
 </resources>
